--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,72 +5,344 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sports Analyst Bot</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+    :root {
+      --bg: #050711;
+      --card: #111320;
+      --card-soft: #15182a;
+      --border: #262b3f;
+      --accent: #7c5cff;
+      --accent-soft: rgba(124, 92, 255, 0.15);
+      --text: #f5f5f5;
+      --muted: #a3a3b3;
+      --danger: #ff4b6a;
+    }
     body {
-      font-family: Arial, sans-serif;
-      background: #121212;
-      color: #ffffff;
-      padding: 20px;
+      margin: 0;
+      min-height: 100vh;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        sans-serif;
+      background: radial-gradient(circle at top left, #1b1032, #050711 55%);
+      color: var(--text);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 24px 16px;
     }
-    label {
-      display: block;
-      margin-top: 10px;
+    .shell {
+      width: 100%;
+      max-width: 960px;
+      background: radial-gradient(circle at top right, #1c1740 0, #111320 55%);
+      border-radius: 18px;
+      padding: 24px;
+      box-shadow:
+        0 24px 60px rgba(0, 0, 0, 0.8),
+        0 0 0 1px rgba(255, 255, 255, 0.02);
+      border: 1px solid rgba(255, 255, 255, 0.04);
     }
-    input, select {
+    .header {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px 12px;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 18px;
+    }
+    .title-block h1 {
+      margin: 0;
+      font-size: 26px;
+      letter-spacing: 0.03em;
+    }
+    .title-block h1 span {
+      color: var(--accent);
+    }
+    .subtitle {
       margin-top: 4px;
-      padding: 6px;
-      width: 220px;
-      max-width: 100%;
+      font-size: 13px;
+      color: var(--muted);
+    }
+    .badge {
+      padding: 4px 10px;
+      border-radius: 999px;
+      font-size: 11px;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      background: var(--accent-soft);
+      color: var(--accent);
+      border: 1px solid rgba(124, 92, 255, 0.4);
+    }
+
+    .content {
+      display: grid;
+      gap: 20px;
+    }
+
+    .card {
+      background: linear-gradient(145deg, var(--card-soft), var(--card));
+      border-radius: 14px;
+      padding: 18px 18px 20px;
+      border: 1px solid var(--border);
+    }
+
+    .card-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 14px;
+      gap: 8px;
+    }
+    .card-title {
+      font-size: 14px;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      color: #d5d5e5;
+    }
+    .pill {
+      font-size: 11px;
+      padding: 4px 10px;
+      border-radius: 999px;
+      background: #070812;
+      color: var(--muted);
+      border: 1px solid #24263a;
+    }
+
+    .grid {
+      display: grid;
+      gap: 14px;
+    }
+    @media (min-width: 720px) {
+      .content {
+        grid-template-columns: 1.15fr 0.95fr;
+        align-items: start;
+      }
+      .grid {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+      }
+      .grid .full {
+        grid-column: span 2;
+      }
+    }
+
+    .field {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+    }
+    .field label {
+      font-size: 12px;
+      color: #d4d4de;
+    }
+    .hint {
+      font-size: 11px;
+      color: var(--muted);
+    }
+    .field input,
+    .field select {
+      border-radius: 8px;
+      border: 1px solid #262a3c;
+      background: #050713;
+      color: var(--text);
+      padding: 8px 10px;
+      font-size: 14px;
+      outline: none;
+      transition: border 0.14s ease, box-shadow 0.14s ease, background 0.14s ease;
+    }
+    .field input::placeholder {
+      color: #666a83;
+    }
+    .field input:focus,
+    .field select:focus {
+      border-color: var(--accent);
+      box-shadow: 0 0 0 1px rgba(124, 92, 255, 0.45);
+      background: #06091a;
+    }
+
+    .actions {
+      display: flex;
+      justify-content: flex-start;
+      margin-top: 6px;
     }
     button {
-      margin-top: 20px;
-      padding: 10px 20px;
+      padding: 9px 22px;
+      border-radius: 999px;
+      border: none;
       cursor: pointer;
+      font-size: 14px;
+      font-weight: 600;
+      background: var(--accent);
+      color: #fff;
+      box-shadow: 0 10px 30px rgba(124, 92, 255, 0.45);
+      transition:
+        transform 0.08s ease,
+        box-shadow 0.08s ease,
+        background 0.12s ease;
     }
-    #resultado {
-      margin-top: 20px;
-      padding: 10px;
-      background: #1e1e1e;
-      border-radius: 4px;
-      min-height: 60px;
+    button:hover {
+      background: #8b6dff;
+      transform: translateY(-1px);
+      box-shadow: 0 14px 36px rgba(124, 92, 255, 0.55);
+    }
+    button:active {
+      transform: translateY(0);
+      box-shadow: 0 6px 16px rgba(124, 92, 255, 0.38);
+    }
+
+    .result-box {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+    .result-label-row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 8px;
+    }
+    .result-label {
+      font-size: 11px;
+      text-transform: uppercase;
+      letter-spacing: 0.16em;
+      color: #9a9ac5;
+    }
+    .tag {
+      font-size: 11px;
+      padding: 3px 9px;
+      border-radius: 999px;
+      background: #101322;
+      border: 1px solid #262b3f;
+      color: var(--muted);
+      white-space: nowrap;
+    }
+
+    .result-body {
+      padding: 10px 11px;
+      border-radius: 10px;
+      background: #090a16;
+      border: 1px solid #23263a;
+      min-height: 64px;
+      font-size: 14px;
+      line-height: 1.5;
+      color: var(--text);
       white-space: pre-wrap;
+    }
+    .muted {
+      color: var(--muted);
+      font-size: 13px;
+      font-style: italic;
+    }
+    .loading {
+      color: #d5d5e8;
+    }
+    .error {
+      color: var(--danger);
+    }
+
+    .footer-note {
+      margin-top: 10px;
+      font-size: 11px;
+      color: var(--muted);
     }
   </style>
 </head>
 
 <body>
-  <h1>Sports Analyst Bot</h1>
-  <p>Analisador de jogos de Basquete e Futebol</p>
+  <div class="shell">
+    <div class="header">
+      <div class="title-block">
+        <h1><span>Sports</span> Analyst Bot</h1>
+        <p class="subtitle">
+          Simule análises inteligentes para jogos de <strong>Futebol</strong> e
+          <strong>Basquete</strong>.
+        </p>
+      </div>
+      <div class="badge">Versão Beta</div>
+    </div>
 
-  <label>Esporte:
-    <select id="esporte">
-      <option value="futebol">Futebol</option>
-      <option value="basquete">Basquete</option>
-    </select>
-  </label>
+    <div class="content">
+      <!-- CARD ESQUERDO: FORMULÁRIO -->
+      <div class="card">
+        <div class="card-header">
+          <div class="card-title">Configurar análise</div>
+          <div class="pill">Preencha os dados do confronto</div>
+        </div>
 
-  <label>Time A:
-    <input id="timeA" type="text" placeholder="Ex: Flamengo" />
-  </label>
+        <div class="grid">
+          <div class="field">
+            <label for="esporte">Esporte</label>
+            <select id="esporte">
+              <option value="futebol">Futebol</option>
+              <option value="basquete">Basquete</option>
+            </select>
+          </div>
 
-  <label>Time B:
-    <input id="timeB" type="text" placeholder="Ex: Fluminense" />
-  </label>
+          <div class="field">
+            <label for="modo">Modo de Análise</label>
+            <select id="modo">
+              <option value="historico">Histórico</option>
+              <option value="ao vivo">Ao vivo</option>
+              <option value="futuro">Futuro</option>
+            </select>
+          </div>
 
-  <label>Modo de Análise:
-    <select id="modo">
-      <option value="historico">Histórico</option>
-      <option value="ao vivo">Ao vivo</option>
-      <option value="futuro">Futuro</option>
-    </select>
-  </label>
+          <div class="field">
+            <label for="timeA">Time A</label>
+            <input id="timeA" type="text" placeholder="Ex: Fluminense" />
+            <span class="hint">Time mandante ou principal.</span>
+          </div>
 
-  <button type="button" onclick="enviarAnalise()">Analisar</button>
+          <div class="field">
+            <label for="timeB">Time B</label>
+            <input id="timeB" type="text" placeholder="Ex: Flamengo" />
+            <span class="hint">Time visitante ou oponente.</span>
+          </div>
 
-  <pre id="resultado"></pre>
+          <div class="actions full">
+            <button type="button" onclick="enviarAnalise()">Analisar agora</button>
+          </div>
+        </div>
+
+        <p class="footer-note">
+          ⚠️ Esta é uma simulação de análise. Os resultados não garantem acerto em apostas.
+        </p>
+      </div>
+
+      <!-- CARD DIREITO: RESULTADO -->
+      <div class="card">
+        <div class="card-header">
+          <div class="card-title">Resultado da análise</div>
+          <div class="pill">Saída do bot</div>
+        </div>
+
+        <div class="result-box">
+          <div class="result-label-row">
+            <div class="result-label">Resumo</div>
+            <div id="tag-info" class="tag">Aguardando dados...</div>
+          </div>
+
+          <div id="resultado" class="result-body muted">
+            Preencha os dados à esquerda e clique em “Analisar agora” para gerar a leitura do confronto.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script>
-    // ⚠️ TROQUE AQUI se sua URL do backend for diferente
+    // 🔗 URL da API no Render (backend)
+    // Se o backend tiver outro link, troque somente esta constante:
     const API_URL = "https://bot-sports-analyst2.onrender.com/analisar";
+
+    function montarTagInfo(esporte, modo) {
+      const e = esporte === "futebol" ? "Futebol" : "Basquete";
+      let m = "";
+      if (modo === "historico") m = "Histórico";
+      else if (modo === "ao vivo") m = "Ao vivo";
+      else m = "Futuro";
+      return `${e} · Modo ${m}`;
+    }
 
     async function enviarAnalise() {
       const esporte = document.getElementById("esporte").value;
@@ -79,30 +351,36 @@
       const modo = document.getElementById("modo").value;
 
       const resultadoEl = document.getElementById("resultado");
+      const tagInfoEl = document.getElementById("tag-info");
 
       if (!timeA || !timeB) {
         alert("Preencha os dois times antes de analisar.");
         return;
       }
 
-      resultadoEl.textContent = "Gerando análise...";
+      tagInfoEl.textContent = montarTagInfo(esporte, modo);
+      resultadoEl.classList.remove("muted", "error");
+      resultadoEl.classList.add("loading");
+      resultadoEl.textContent = "Gerando análise com base nas informações fornecidas...";
 
       try {
         const resposta = await fetch(API_URL, {
           method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
+          headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ esporte, timeA, timeB, modo })
         });
 
         const dados = await resposta.json();
 
-        resultadoEl.textContent = JSON.stringify(dados, null, 2);
+        resultadoEl.classList.remove("loading");
+        resultadoEl.textContent =
+          dados.analise || "Não foi possível gerar a análise no momento.";
       } catch (erro) {
         console.error(erro);
+        resultadoEl.classList.remove("loading");
+        resultadoEl.classList.add("error");
         resultadoEl.textContent =
-          "Erro ao conectar com o servidor: " + erro.message;
+          "Erro ao conectar com o servidor. Tente novamente em alguns instantes.";
       }
     }
   </script>
