--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,344 +4,162 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sports Analyst Bot</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
-    * {
-      box-sizing: border-box;
-    }
     :root {
-      --bg: #050711;
-      --card: #111320;
-      --card-soft: #15182a;
-      --border: #262b3f;
-      --accent: #7c5cff;
-      --accent-soft: rgba(124, 92, 255, 0.15);
-      --text: #f5f5f5;
-      --muted: #a3a3b3;
-      --danger: #ff4b6a;
+      --futebol: #0d8b3d;
+      --basquete: #e65c00;
+      --dark: #121212;
+      --darker: #0a0a0a;
+      --light: #ffffff;
+      --gray: #333333;
     }
     body {
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: linear-gradient(135deg, #0f0f0f, #1a1a1a);
+      color: #e0e0e0;
       margin: 0;
+      padding: 20px;
       min-height: 100vh;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
-      background: radial-gradient(circle at top left, #1b1032, #050711 55%);
-      color: var(--text);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 24px 16px;
     }
-    .shell {
-      width: 100%;
-      max-width: 960px;
-      background: radial-gradient(circle at top right, #1c1740 0, #111320 55%);
-      border-radius: 18px;
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+      background: var(--gray);
+      border-radius: 16px;
       padding: 24px;
-      box-shadow:
-        0 24px 60px rgba(0, 0, 0, 0.8),
-        0 0 0 1px rgba(255, 255, 255, 0.02);
-      border: 1px solid rgba(255, 255, 255, 0.04);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.6);
     }
-    .header {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px 12px;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 18px;
+    h1 {
+      text-align: center;
+      margin: 0 0 8px 0;
+      font-size: 2.2em;
+      background: linear-gradient(90deg, var(--futebol), var(--basquete));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
-    .title-block h1 {
-      margin: 0;
-      font-size: 26px;
-      letter-spacing: 0.03em;
-    }
-    .title-block h1 span {
-      color: var(--accent);
-    }
-    .subtitle {
-      margin-top: 4px;
-      font-size: 13px;
-      color: var(--muted);
-    }
-    .badge {
-      padding: 4px 10px;
-      border-radius: 999px;
-      font-size: 11px;
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
-      background: var(--accent-soft);
-      color: var(--accent);
-      border: 1px solid rgba(124, 92, 255, 0.4);
-    }
+    p { text-align: center; opacity: 0.8; margin-bottom: 24px; }
 
-    .content {
-      display: grid;
-      gap: 20px;
-    }
-
-    .card {
-      background: linear-gradient(145deg, var(--card-soft), var(--card));
-      border-radius: 14px;
-      padding: 18px 18px 20px;
-      border: 1px solid var(--border);
-    }
-
-    .card-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 14px;
-      gap: 8px;
-    }
-    .card-title {
-      font-size: 14px;
+    label {
+      display: block;
+      margin-top: 16px;
       font-weight: 600;
-      text-transform: uppercase;
-      letter-spacing: 0.12em;
-      color: #d5d5e5;
     }
-    .pill {
-      font-size: 11px;
-      padding: 4px 10px;
-      border-radius: 999px;
-      background: #070812;
-      color: var(--muted);
-      border: 1px solid #24263a;
-    }
-
-    .grid {
-      display: grid;
-      gap: 14px;
-    }
-    @media (min-width: 720px) {
-      .content {
-        grid-template-columns: 1.15fr 0.95fr;
-        align-items: start;
-      }
-      .grid {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-      }
-      .grid .full {
-        grid-column: span 2;
-      }
-    }
-
-    .field {
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-    }
-    .field label {
-      font-size: 12px;
-      color: #d4d4de;
-    }
-    .hint {
-      font-size: 11px;
-      color: var(--muted);
-    }
-    .field input,
-    .field select {
-      border-radius: 8px;
-      border: 1px solid #262a3c;
-      background: #050713;
-      color: var(--text);
-      padding: 8px 10px;
-      font-size: 14px;
-      outline: none;
-      transition: border 0.14s ease, box-shadow 0.14s ease, background 0.14s ease;
-    }
-    .field input::placeholder {
-      color: #666a83;
-    }
-    .field input:focus,
-    .field select:focus {
-      border-color: var(--accent);
-      box-shadow: 0 0 0 1px rgba(124, 92, 255, 0.45);
-      background: #06091a;
-    }
-
-    .actions {
-      display: flex;
-      justify-content: flex-start;
+    input, select {
+      width: 100%;
+      padding: 12px;
       margin-top: 6px;
-    }
-    button {
-      padding: 9px 22px;
-      border-radius: 999px;
       border: none;
+      border-radius: 8px;
+      background: #444;
+      color: white;
+      font-size: 1em;
+    }
+    select { cursor: pointer; }
+
+    button {
+      width: 100%;
+      margin-top: 28px;
+      padding: 14px;
+      background: linear-gradient(90deg, var(--futebol), var(--basquete));
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 1.1em;
+      font-weight: bold;
       cursor: pointer;
-      font-size: 14px;
-      font-weight: 600;
-      background: var(--accent);
-      color: #fff;
-      box-shadow: 0 10px 30px rgba(124, 92, 255, 0.45);
-      transition:
-        transform 0.08s ease,
-        box-shadow 0.08s ease,
-        background 0.12s ease;
+      transition: all 0.3s;
     }
-    button:hover {
-      background: #8b6dff;
-      transform: translateY(-1px);
-      box-shadow: 0 14px 36px rgba(124, 92, 255, 0.55);
-    }
-    button:active {
-      transform: translateY(0);
-      box-shadow: 0 6px 16px rgba(124, 92, 255, 0.38);
-    }
+    button:hover { transform: translateY(-2px); box-shadow: 0 8px 20px rgba(0,0,0,0.5); }
+    button:disabled { opacity: 0.6; cursor: not-allowed; transform: none; }
 
-    .result-box {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-    }
-    .result-label-row {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 8px;
-    }
-    .result-label {
-      font-size: 11px;
-      text-transform: uppercase;
-      letter-spacing: 0.16em;
-      color: #9a9ac5;
-    }
-    .tag {
-      font-size: 11px;
-      padding: 3px 9px;
-      border-radius: 999px;
-      background: #101322;
-      border: 1px solid #262b3f;
-      color: var(--muted);
-      white-space: nowrap;
-    }
-
-    .result-body {
-      padding: 10px 11px;
-      border-radius: 10px;
-      background: #090a16;
-      border: 1px solid #23263a;
-      min-height: 64px;
-      font-size: 14px;
-      line-height: 1.5;
-      color: var(--text);
-      white-space: pre-wrap;
-    }
-    .muted {
-      color: var(--muted);
-      font-size: 13px;
-      font-style: italic;
+    #resultado {
+      margin-top: 24px;
+      padding: 20px;
+      background: #1e1e1e;
+      border-radius: 12px;
+      min-height: 100px;
+      line-height: 1.6;
+      border-left: 4px solid var(--futebol);
+      transition: border-left-color 0.4s;
     }
     .loading {
-      color: #d5d5e8;
+      text-align: center;
+      color: #888;
+      font-style: italic;
     }
-    .error {
-      color: var(--danger);
+    .spinner {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      border: 3px solid #333;
+      border-top: 3px solid #fff;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin-right: 10px;
     }
+    @keyframes spin { to { transform: rotate(360deg); } }
 
-    .footer-note {
-      margin-top: 10px;
-      font-size: 11px;
-      color: var(--muted);
+    .error { color: #ff6b6b; }
+    .footer {
+      text-align: center;
+      margin-top: 30px;
+      font-size: 0.9em;
+      opacity: 0.6;
     }
   </style>
 </head>
-
 <body>
-  <div class="shell">
-    <div class="header">
-      <div class="title-block">
-        <h1><span>Sports</span> Analyst Bot</h1>
-        <p class="subtitle">
-          Simule análises inteligentes para jogos de <strong>Futebol</strong> e
-          <strong>Basquete</strong>.
-        </p>
-      </div>
-      <div class="badge">Versão Beta</div>
+  <div class="container">
+    <h1><i class="fas fa-robot"></i> Sports Analyst Bot</h1>
+    <p>IA especializada em análise de Futebol e Basquete</p>
+
+    <label>Esporte:
+      <select id="esporte" onchange="atualizarCor()">
+        <option value="futebol">⚽ Futebol</option>
+        <option value="basquete">🏀 Basquete</option>
+      </select>
+    </label>
+
+    <label>Time A (Mandante ou Time 1):
+      <input id="timeA" type="text" placeholder="Ex: Flamengo" />
+    </label>
+
+    <label>Time B (Visitante ou Time 2):
+      <input id="timeB" type="text" placeholder="Ex: Fluminense" />
+    </label>
+
+    <label>Modo de Análise:
+      <select id="modo">
+        <option value="historico">Histórico de confrontos</option>
+        <option value="ao vivo">Jogo ao vivo (em andamento)</option>
+        <option value="futuro">Próximo jogo (previsão)</option>
+      </select>
+    </label>
+
+    <button type="button" onclick="enviarAnalise()" id="btnAnalisar">
+      <i class="fas fa-search"></i> Analisar Partida
+    </button>
+
+    <div id="resultado">
+      Preencha os campos acima e clique em "Analisar Partida" para começar.
     </div>
 
-    <div class="content">
-      <!-- CARD ESQUERDO: FORMULÁRIO -->
-      <div class="card">
-        <div class="card-header">
-          <div class="card-title">Configurar análise</div>
-          <div class="pill">Preencha os dados do confronto</div>
-        </div>
-
-        <div class="grid">
-          <div class="field">
-            <label for="esporte">Esporte</label>
-            <select id="esporte">
-              <option value="futebol">Futebol</option>
-              <option value="basquete">Basquete</option>
-            </select>
-          </div>
-
-          <div class="field">
-            <label for="modo">Modo de Análise</label>
-            <select id="modo">
-              <option value="historico">Histórico</option>
-              <option value="ao vivo">Ao vivo</option>
-              <option value="futuro">Futuro</option>
-            </select>
-          </div>
-
-          <div class="field">
-            <label for="timeA">Time A</label>
-            <input id="timeA" type="text" placeholder="Ex: Fluminense" />
-            <span class="hint">Time mandante ou principal.</span>
-          </div>
-
-          <div class="field">
-            <label for="timeB">Time B</label>
-            <input id="timeB" type="text" placeholder="Ex: Flamengo" />
-            <span class="hint">Time visitante ou oponente.</span>
-          </div>
-
-          <div class="actions full">
-            <button type="button" onclick="enviarAnalise()">Analisar agora</button>
-          </div>
-        </div>
-
-        <p class="footer-note">
-          ⚠️ Esta é uma simulação de análise. Os resultados não garantem acerto em apostas.
-        </p>
-      </div>
-
-      <!-- CARD DIREITO: RESULTADO -->
-      <div class="card">
-        <div class="card-header">
-          <div class="card-title">Resultado da análise</div>
-          <div class="pill">Saída do bot</div>
-        </div>
-
-        <div class="result-box">
-          <div class="result-label-row">
-            <div class="result-label">Resumo</div>
-            <div id="tag-info" class="tag">Aguardando dados...</div>
-          </div>
-
-          <div id="resultado" class="result-body muted">
-            Preencha os dados à esquerda e clique em “Analisar agora” para gerar a leitura do confronto.
-          </div>
-        </div>
-      </div>
+    <div class="footer">
+      Desenvolvido com ❤️ por quem ama esporte e IA
     </div>
   </div>
 
   <script>
-    // 🔗 URL da API no Render (backend)
-    // Se o backend tiver outro link, troque somente esta constante:
-    const API_URL = "https://bot-sports-analyst2.onrender.com/analisar";
+    const API_URL = "https://bot-sports-analyst2.onrender.com/analisar"; // ← mude se necessário
 
-    function montarTagInfo(esporte, modo) {
-      const e = esporte === "futebol" ? "Futebol" : "Basquete";
-      let m = "";
-      if (modo === "historico") m = "Histórico";
-      else if (modo === "ao vivo") m = "Ao vivo";
-      else m = "Futuro";
-      return `${e} · Modo ${m}`;
+    function atualizarCor() {
+      const esporte = document.getElementById("esporte").value;
+      const cor = esporte === "basquete" ? "var(--basquete)" : "var(--futebol)";
+      document.getElementById("resultado").style.borderLeftColor = cor;
+      document.querySelector("button").style.background = esporte === "basquete" 
+        ? "linear-gradient(90deg, #e65c00, #ff8c1a)" 
+        : "linear-gradient(90deg, #0d8b3d, #34d958)";
     }
 
     async function enviarAnalise() {
@@ -349,19 +167,18 @@
       const timeA = document.getElementById("timeA").value.trim();
       const timeB = document.getElementById("timeB").value.trim();
       const modo = document.getElementById("modo").value;
-
       const resultadoEl = document.getElementById("resultado");
-      const tagInfoEl = document.getElementById("tag-info");
+      const btn = document.getElementById("btnAnalisar");
 
       if (!timeA || !timeB) {
-        alert("Preencha os dois times antes de analisar.");
+        alert("⚠️ Por favor, preencha os dois times!");
         return;
       }
 
-      tagInfoEl.textContent = montarTagInfo(esporte, modo);
-      resultadoEl.classList.remove("muted", "error");
-      resultadoEl.classList.add("loading");
-      resultadoEl.textContent = "Gerando análise com base nas informações fornecidas...";
+      // UI de carregamento
+      resultadoEl.innerHTML = `<div class="loading"><div class="spinner"></div> Processando análise com IA...</div>`;
+      btn.disabled = true;
+      btn.innerHTML = '<i class="fas fa-cog fa-spin"></i> Analisando...';
 
       try {
         const resposta = await fetch(API_URL, {
@@ -370,19 +187,31 @@
           body: JSON.stringify({ esporte, timeA, timeB, modo })
         });
 
+        if (!resposta.ok) throw new Error(`Erro ${resposta.status}`);
+
         const dados = await resposta.json();
 
-        resultadoEl.classList.remove("loading");
-        resultadoEl.textContent =
-          dados.analise || "Não foi possível gerar a análise no momento.";
+        // Exibe a análise de forma bonita (ajuste conforme o formato do seu backend)
+        if (dados.analise || dados.resultado) {
+          resultadoEl.innerHTML = `
+            <strong>${timeA} × ${timeB}</strong><br><br>
+            ${dados.analise || dados.resultado || dados.texto || JSON.stringify(dados, null, 2)}
+          `.trim();
+        } else {
+          resultadoEl.innerHTML = "<pre>" + JSON.stringify(dados, null, 2) + "</pre>";
+        }
+
       } catch (erro) {
         console.error(erro);
-        resultadoEl.classList.remove("loading");
-        resultadoEl.classList.add("error");
-        resultadoEl.textContent =
-          "Erro ao conectar com o servidor. Tente novamente em alguns instantes.";
+        resultadoEl.innerHTML = `<span class="error">❌ Erro ao conectar com o servidor:<br>${erro.message}</span>`;
+      } finally {
+        btn.disabled = false;
+        btn.innerHTML = '<i class="fas fa-search"></i> Analisar Partida';
       }
     }
+
+    // Cor inicial
+    atualizarCor();
   </script>
 </body>
 </html>
